--- a/src/styles.css
+++ b/src/styles.css
@@ -352,4 +352,8 @@ For mobile and tablet screens
 
 @media screen and (max-width: 500px){
     /* Add your responsive code here */
+    .col{
+        width: 100%;
+        max-width: unset;
+    }
 }
